C-C names 2nd round

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="GET">
-        <input type="text">
-        <button type="submit"></button>
-    </form>
+	<h1>hey</h1>
+<ul>
+	
+	{% for i in s %}
+		<li>i</li>
+	{% endfor %}
+</ul>
+    
 </body>
 </html>
