--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -1,1 +1,16 @@
-<!-- write code for 404 Error -->
+
+<!DOCTYPE html>
+<html lang="en">
+    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Oops!</title>
+</head>
+
+<body>
+    <h1> Something went wrong</h1>
+    <h3> error 404 </h3>
+</body>
+</html>
