--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Document</title>
 </head>
 <body>
-	<h1>TEST</h1>
+	<h1>TEST MANES SAS </h1>
 		<select id="choice" onchange="change_func()" >
 		{% for i in items.cc_names %}
  		<option value="{{i}}" >{{i}}</option>
 		{% endfor %}
 		</select>
 		<p id="this_is_sparta"></p>
+        <button id="test" type="button" name="button" onclick=""> ok !</button>
 <hr>
 <br>
 
@@ -26,15 +29,10 @@
 	</ul>
 	<div>
 		<embed type="image/svg+xml" src="{{items.bar_chart | safe}}" style="max-width: 1000px;" >
-			
+
 		</embed>
 	</div>
 
-	<script>
-	function change_func(){
-		let x = document.getElementById('choice').value
-		document.getElementById('this_is_sparta').innerHTML = 'This is ' + x
-	}
-	</script>
+	<script src="{{ url_for('static', filename='xml.js') }}"></script>
 </body>
 </html>
